Project2/y.output
State 90 conflicts: 1 shift/reduce, 1 reduce/reduce
State 91 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce
State 122 conflicts: 13 shift/reduce
State 123 conflicts: 13 shift/reduce
State 165 conflicts: 13 shift/reduce
State 166 conflicts: 13 shift/reduce
State 167 conflicts: 13 shift/reduce
State 168 conflicts: 13 shift/reduce
State 169 conflicts: 13 shift/reduce
State 170 conflicts: 13 shift/reduce
State 171 conflicts: 13 shift/reduce
State 172 conflicts: 13 shift/reduce
State 173 conflicts: 13 shift/reduce
State 174 conflicts: 13 shift/reduce
State 175 conflicts: 13 shift/reduce
State 176 conflicts: 13 shift/reduce
State 177 conflicts: 13 shift/reduce
State 178 conflicts: 13 shift/reduce
State 195 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Decl
    2        | Decl Program

    3 Decl: VariableDecl
    4     | FunctionDecl
    5     | ClassDecl
    6     | InterfaceDecl

    7 VariableDecl: Variable _semicolon

    8 Variable: Type _id

    9 Type: _int
   10     | _double
   11     | _boolean
   12     | _string
   13     | Type _leftbracket _rightbracket
   14     | _id

   15 FunctionDecl: Type _id _leftparen Formals _rightparen StmtBlock
   16             | _void _id _leftparen Formals _rightparen StmtBlock
   17             | Type _id _leftparen _rightparen StmtBlock
   18             | _void _id _leftparen _rightparen StmtBlock

   19 Formals: Variables

   20 Variables: Variable _comma Variables
   21          | Variable

   22 ClassDecl: _class _id Fields0
   23          | _class _id _extends _id Fields0
   24          | _class _id _implements Ids Fields0
   25          | _class _id _extends _id _implements Ids Fields0

   26 Ids: _id
   27    | _id _comma Ids

   28 Fields0: _leftbrace _rightbrace
   29        | _leftbrace Fields _rightbrace

   30 Fields: Field
   31       | Field Fields

   32 Field: VariableDecl
   33      | FunctionDecl

   34 InterfaceDecl: _interface _id _leftbrace Prototypes _rightbrace
   35              | _interface _id _leftbrace _rightbrace

   36 Prototypes: Prototype
   37           | Prototype Prototypes

   38 Prototype: Type _id _leftparen Formals _rightparen _semicolon
   39          | _void _id _leftparen Formals _rightparen _semicolon

   40 StmtBlock: _leftbrace VariableDecls _rightbrace
   41          | _leftbrace Stmts _rightbrace
   42          | _leftbrace VariableDecls Stmts _rightbrace

   43 VariableDecls: VariableDecl
   44              | VariableDecl VariableDecls

   45 Stmts: Stmt
   46      | Stmt Stmts

   47 Stmt: _semicolon
   48     | Expr _semicolon
   49     | IfStmt
   50     | WhileStmt
   51     | ForStmt
   52     | BreakStmt
   53     | ReturnStmt
   54     | PrintStmt
   55     | StmtBlock

   56 IfStmt: _if _leftparen Expr _rightparen Stmt
   57       | _if _leftparen Expr _rightparen Stmt _else Stmt

   58 WhileStmt: _while _leftparen Expr _rightparen Stmt

   59 ForStmt: _for _leftparen _semicolon Expr _semicolon _rightparen Stmt
   60        | _for _leftparen Expr _semicolon Expr _semicolon _rightparen Stmt
   61        | _for _leftparen _semicolon Expr _semicolon Expr _rightparen Stmt
   62        | _for _leftparen Expr _semicolon Expr _semicolon Expr _rightparen Stmt

   63 BreakStmt: _break _semicolon

   64 ReturnStmt: _return _semicolon
   65           | _return Expr _semicolon

   66 PrintStmt: _println _leftparen Exprs _rightparen _semicolon

   67 Exprs: Expr
   68      | Expr _comma Exprs

   69 Expr: Constant
   70     | Lvalue
   71     | Call
   72     | _readln _leftparen _rightparen
   73     | _newarray _leftparen _intconstant _comma Type _rightparen
   74     | Lvalue _assignop Expr
   75     | Expr _or Expr
   76     | Expr _and Expr
   77     | Expr _equal Expr
   78     | Expr _notequal Expr
   79     | Expr _less Expr
   80     | Expr _lessequal Expr
   81     | Expr _greater Expr
   82     | Expr _greaterequal Expr
   83     | Expr _plus Expr
   84     | Expr _minus Expr
   85     | Expr _multiplication Expr
   86     | Expr _division Expr
   87     | Expr _mod Expr
   88     | _not Expr
   89     | _minus Expr
   90     | _leftparen Expr _rightparen

   91 Lvalue: _id
   92       | Lvalue _leftbracket Expr _rightbracket
   93       | Lvalue _period _id

   94 Call: _id _leftparen Actuals _rightparen
   95     | _id _period _id _leftparen Actuals _rightparen

   96 Actuals: Exprs
   97        | %empty

   98 Constant: _intconstant
   99         | _doubleconstant
  100         | _booleanconstant
  101         | _stringconstant


Terminals, with rules where they appear

$end (0) 0
error (256)
_boolean (258) 11
_break (259) 63
_class (260) 22 23 24 25
_double (261) 10
_else (262) 57
_extends (263) 23 25
_for (264) 59 60 61 62
_if (265) 56 57
_implements (266) 24 25
_interface (267) 34 35
_int (268) 9
_newarray (269) 73
_println (270) 66
_readln (271) 72
_return (272) 64 65
_string (273) 12
_void (274) 16 18 39
_while (275) 58
_plus (276) 83
_minus (277) 84 89
_multiplication (278) 85
_division (279) 86
_mod (280) 87
_less (281) 79
_lessequal (282) 80
_greater (283) 81
_greaterequal (284) 82
_equal (285) 77
_notequal (286) 78
_and (287) 76
_or (288) 75
_not (289) 88
_assignop (290) 74
_semicolon (291) 7 38 39 47 48 59 60 61 62 63 64 65 66
_comma (292) 20 27 68 73
_period (293) 93 95
_leftparen (294) 15 16 17 18 38 39 56 57 58 59 60 61 62 66 72 73 90
    94 95
_rightparen (295) 15 16 17 18 38 39 56 57 58 59 60 61 62 66 72 73 90
    94 95
_leftbracket (296) 13 92
_rightbracket (297) 13 92
_leftbrace (298) 28 29 34 35 40 41 42
_rightbrace (299) 28 29 34 35 40 41 42
_intconstant (300) 73 98
_doubleconstant (301) 99
_stringconstant (302) 101
_booleanconstant (303) 100
_id (304) 8 14 15 16 17 18 22 23 24 25 26 27 34 35 38 39 91 93 94 95


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
Program (51)
    on left: 1 2, on right: 0 2
Decl (52)
    on left: 3 4 5 6, on right: 1 2
VariableDecl (53)
    on left: 7, on right: 3 32 43 44
Variable (54)
    on left: 8, on right: 7 20 21
Type (55)
    on left: 9 10 11 12 13 14, on right: 8 13 15 17 38 73
FunctionDecl (56)
    on left: 15 16 17 18, on right: 4 33
Formals (57)
    on left: 19, on right: 15 16 38 39
Variables (58)
    on left: 20 21, on right: 19 20
ClassDecl (59)
    on left: 22 23 24 25, on right: 5
Ids (60)
    on left: 26 27, on right: 24 25 27
Fields0 (61)
    on left: 28 29, on right: 22 23 24 25
Fields (62)
    on left: 30 31, on right: 29 31
Field (63)
    on left: 32 33, on right: 30 31
InterfaceDecl (64)
    on left: 34 35, on right: 6
Prototypes (65)
    on left: 36 37, on right: 34 37
Prototype (66)
    on left: 38 39, on right: 36 37
StmtBlock (67)
    on left: 40 41 42, on right: 15 16 17 18 55
VariableDecls (68)
    on left: 43 44, on right: 40 42 44
Stmts (69)
    on left: 45 46, on right: 41 42 46
Stmt (70)
    on left: 47 48 49 50 51 52 53 54 55, on right: 45 46 56 57 58 59
    60 61 62
IfStmt (71)
    on left: 56 57, on right: 49
WhileStmt (72)
    on left: 58, on right: 50
ForStmt (73)
    on left: 59 60 61 62, on right: 51
BreakStmt (74)
    on left: 63, on right: 52
ReturnStmt (75)
    on left: 64 65, on right: 53
PrintStmt (76)
    on left: 66, on right: 54
Exprs (77)
    on left: 67 68, on right: 66 68 96
Expr (78)
    on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
    87 88 89 90, on right: 48 56 57 58 59 60 61 62 65 67 68 74 75 76
    77 78 79 80 81 82 83 84 85 86 87 88 89 90 92
Lvalue (79)
    on left: 91 92 93, on right: 70 74 92 93
Call (80)
    on left: 94 95, on right: 71
Actuals (81)
    on left: 96 97, on right: 94 95
Constant (82)
    on left: 98 99 100 101, on right: 69


State 0

    0 $accept: . Program $end

    _boolean    shift, and go to state 1
    _class      shift, and go to state 2
    _double     shift, and go to state 3
    _interface  shift, and go to state 4
    _int        shift, and go to state 5
    _string     shift, and go to state 6
    _void       shift, and go to state 7
    _id         shift, and go to state 8

    Program        go to state 9
    Decl           go to state 10
    VariableDecl   go to state 11
    Variable       go to state 12
    Type           go to state 13
    FunctionDecl   go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


State 1

   11 Type: _boolean .

    $default  reduce using rule 11 (Type)


State 2

   22 ClassDecl: _class . _id Fields0
   23          | _class . _id _extends _id Fields0
   24          | _class . _id _implements Ids Fields0
   25          | _class . _id _extends _id _implements Ids Fields0

    _id  shift, and go to state 17


State 3

   10 Type: _double .

    $default  reduce using rule 10 (Type)


State 4

   34 InterfaceDecl: _interface . _id _leftbrace Prototypes _rightbrace
   35              | _interface . _id _leftbrace _rightbrace

    _id  shift, and go to state 18


State 5

    9 Type: _int .

    $default  reduce using rule 9 (Type)


State 6

   12 Type: _string .

    $default  reduce using rule 12 (Type)


State 7

   16 FunctionDecl: _void . _id _leftparen Formals _rightparen StmtBlock
   18             | _void . _id _leftparen _rightparen StmtBlock

    _id  shift, and go to state 19


State 8

   14 Type: _id .

    $default  reduce using rule 14 (Type)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 20


State 10

    1 Program: Decl .
    2        | Decl . Program

    _boolean    shift, and go to state 1
    _class      shift, and go to state 2
    _double     shift, and go to state 3
    _interface  shift, and go to state 4
    _int        shift, and go to state 5
    _string     shift, and go to state 6
    _void       shift, and go to state 7
    _id         shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Program        go to state 21
    Decl           go to state 10
    VariableDecl   go to state 11
    Variable       go to state 12
    Type           go to state 13
    FunctionDecl   go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


State 11

    3 Decl: VariableDecl .

    $default  reduce using rule 3 (Decl)


State 12

    7 VariableDecl: Variable . _semicolon

    _semicolon  shift, and go to state 22


State 13

    8 Variable: Type . _id
   13 Type: Type . _leftbracket _rightbracket
   15 FunctionDecl: Type . _id _leftparen Formals _rightparen StmtBlock
   17             | Type . _id _leftparen _rightparen StmtBlock

    _leftbracket  shift, and go to state 23
    _id           shift, and go to state 24


State 14

    4 Decl: FunctionDecl .

    $default  reduce using rule 4 (Decl)


State 15

    5 Decl: ClassDecl .

    $default  reduce using rule 5 (Decl)


State 16

    6 Decl: InterfaceDecl .

    $default  reduce using rule 6 (Decl)


State 17

   22 ClassDecl: _class _id . Fields0
   23          | _class _id . _extends _id Fields0
   24          | _class _id . _implements Ids Fields0
   25          | _class _id . _extends _id _implements Ids Fields0

    _extends     shift, and go to state 25
    _implements  shift, and go to state 26
    _leftbrace   shift, and go to state 27

    Fields0  go to state 28


State 18

   34 InterfaceDecl: _interface _id . _leftbrace Prototypes _rightbrace
   35              | _interface _id . _leftbrace _rightbrace

    _leftbrace  shift, and go to state 29


State 19

   16 FunctionDecl: _void _id . _leftparen Formals _rightparen StmtBlock
   18             | _void _id . _leftparen _rightparen StmtBlock

    _leftparen  shift, and go to state 30


State 20

    0 $accept: Program $end .

    $default  accept


State 21

    2 Program: Decl Program .

    $default  reduce using rule 2 (Program)


State 22

    7 VariableDecl: Variable _semicolon .

    $default  reduce using rule 7 (VariableDecl)


State 23

   13 Type: Type _leftbracket . _rightbracket

    _rightbracket  shift, and go to state 31


State 24

    8 Variable: Type _id .
   15 FunctionDecl: Type _id . _leftparen Formals _rightparen StmtBlock
   17             | Type _id . _leftparen _rightparen StmtBlock

    _leftparen  shift, and go to state 32

    $default  reduce using rule 8 (Variable)


State 25

   23 ClassDecl: _class _id _extends . _id Fields0
   25          | _class _id _extends . _id _implements Ids Fields0

    _id  shift, and go to state 33


State 26

   24 ClassDecl: _class _id _implements . Ids Fields0

    _id  shift, and go to state 34

    Ids  go to state 35


State 27

   28 Fields0: _leftbrace . _rightbrace
   29        | _leftbrace . Fields _rightbrace

    _boolean     shift, and go to state 1
    _double      shift, and go to state 3
    _int         shift, and go to state 5
    _string      shift, and go to state 6
    _void        shift, and go to state 7
    _rightbrace  shift, and go to state 36
    _id          shift, and go to state 8

    VariableDecl  go to state 37
    Variable      go to state 12
    Type          go to state 13
    FunctionDecl  go to state 38
    Fields        go to state 39
    Field         go to state 40


State 28

   22 ClassDecl: _class _id Fields0 .

    $default  reduce using rule 22 (ClassDecl)


State 29

   34 InterfaceDecl: _interface _id _leftbrace . Prototypes _rightbrace
   35              | _interface _id _leftbrace . _rightbrace

    _boolean     shift, and go to state 1
    _double      shift, and go to state 3
    _int         shift, and go to state 5
    _string      shift, and go to state 6
    _void        shift, and go to state 41
    _rightbrace  shift, and go to state 42
    _id          shift, and go to state 8

    Type        go to state 43
    Prototypes  go to state 44
    Prototype   go to state 45


State 30

   16 FunctionDecl: _void _id _leftparen . Formals _rightparen StmtBlock
   18             | _void _id _leftparen . _rightparen StmtBlock

    _boolean     shift, and go to state 1
    _double      shift, and go to state 3
    _int         shift, and go to state 5
    _string      shift, and go to state 6
    _rightparen  shift, and go to state 46
    _id          shift, and go to state 8

    Variable   go to state 47
    Type       go to state 48
    Formals    go to state 49
    Variables  go to state 50


State 31

   13 Type: Type _leftbracket _rightbracket .

    $default  reduce using rule 13 (Type)


State 32

   15 FunctionDecl: Type _id _leftparen . Formals _rightparen StmtBlock
   17             | Type _id _leftparen . _rightparen StmtBlock

    _boolean     shift, and go to state 1
    _double      shift, and go to state 3
    _int         shift, and go to state 5
    _string      shift, and go to state 6
    _rightparen  shift, and go to state 51
    _id          shift, and go to state 8

    Variable   go to state 47
    Type       go to state 48
    Formals    go to state 52
    Variables  go to state 50


State 33

   23 ClassDecl: _class _id _extends _id . Fields0
   25          | _class _id _extends _id . _implements Ids Fields0

    _implements  shift, and go to state 53
    _leftbrace   shift, and go to state 27

    Fields0  go to state 54


State 34

   26 Ids: _id .
   27    | _id . _comma Ids

    _comma  shift, and go to state 55

    $default  reduce using rule 26 (Ids)


State 35

   24 ClassDecl: _class _id _implements Ids . Fields0

    _leftbrace  shift, and go to state 27

    Fields0  go to state 56


State 36

   28 Fields0: _leftbrace _rightbrace .

    $default  reduce using rule 28 (Fields0)


State 37

   32 Field: VariableDecl .

    $default  reduce using rule 32 (Field)


State 38

   33 Field: FunctionDecl .

    $default  reduce using rule 33 (Field)


State 39

   29 Fields0: _leftbrace Fields . _rightbrace

    _rightbrace  shift, and go to state 57


State 40

   30 Fields: Field .
   31       | Field . Fields

    _boolean  shift, and go to state 1
    _double   shift, and go to state 3
    _int      shift, and go to state 5
    _string   shift, and go to state 6
    _void     shift, and go to state 7
    _id       shift, and go to state 8

    $default  reduce using rule 30 (Fields)

    VariableDecl  go to state 37
    Variable      go to state 12
    Type          go to state 13
    FunctionDecl  go to state 38
    Fields        go to state 58
    Field         go to state 40


State 41

   39 Prototype: _void . _id _leftparen Formals _rightparen _semicolon

    _id  shift, and go to state 59


State 42

   35 InterfaceDecl: _interface _id _leftbrace _rightbrace .

    $default  reduce using rule 35 (InterfaceDecl)


State 43

   13 Type: Type . _leftbracket _rightbracket
   38 Prototype: Type . _id _leftparen Formals _rightparen _semicolon

    _leftbracket  shift, and go to state 23
    _id           shift, and go to state 60


State 44

   34 InterfaceDecl: _interface _id _leftbrace Prototypes . _rightbrace

    _rightbrace  shift, and go to state 61


State 45

   36 Prototypes: Prototype .
   37           | Prototype . Prototypes

    _boolean  shift, and go to state 1
    _double   shift, and go to state 3
    _int      shift, and go to state 5
    _string   shift, and go to state 6
    _void     shift, and go to state 41
    _id       shift, and go to state 8

    $default  reduce using rule 36 (Prototypes)

    Type        go to state 43
    Prototypes  go to state 62
    Prototype   go to state 45


State 46

   18 FunctionDecl: _void _id _leftparen _rightparen . StmtBlock

    _leftbrace  shift, and go to state 63

    StmtBlock  go to state 64


State 47

   20 Variables: Variable . _comma Variables
   21          | Variable .

    _comma  shift, and go to state 65

    $default  reduce using rule 21 (Variables)


State 48

    8 Variable: Type . _id
   13 Type: Type . _leftbracket _rightbracket

    _leftbracket  shift, and go to state 23
    _id           shift, and go to state 66


State 49

   16 FunctionDecl: _void _id _leftparen Formals . _rightparen StmtBlock

    _rightparen  shift, and go to state 67


State 50

   19 Formals: Variables .

    $default  reduce using rule 19 (Formals)


State 51

   17 FunctionDecl: Type _id _leftparen _rightparen . StmtBlock

    _leftbrace  shift, and go to state 63

    StmtBlock  go to state 68


State 52

   15 FunctionDecl: Type _id _leftparen Formals . _rightparen StmtBlock

    _rightparen  shift, and go to state 69


State 53

   25 ClassDecl: _class _id _extends _id _implements . Ids Fields0

    _id  shift, and go to state 34

    Ids  go to state 70


State 54

   23 ClassDecl: _class _id _extends _id Fields0 .

    $default  reduce using rule 23 (ClassDecl)


State 55

   27 Ids: _id _comma . Ids

    _id  shift, and go to state 34

    Ids  go to state 71


State 56

   24 ClassDecl: _class _id _implements Ids Fields0 .

    $default  reduce using rule 24 (ClassDecl)


State 57

   29 Fields0: _leftbrace Fields _rightbrace .

    $default  reduce using rule 29 (Fields0)


State 58

   31 Fields: Field Fields .

    $default  reduce using rule 31 (Fields)


State 59

   39 Prototype: _void _id . _leftparen Formals _rightparen _semicolon

    _leftparen  shift, and go to state 72


State 60

   38 Prototype: Type _id . _leftparen Formals _rightparen _semicolon

    _leftparen  shift, and go to state 73


State 61

   34 InterfaceDecl: _interface _id _leftbrace Prototypes _rightbrace .

    $default  reduce using rule 34 (InterfaceDecl)


State 62

   37 Prototypes: Prototype Prototypes .

    $default  reduce using rule 37 (Prototypes)


State 63

   40 StmtBlock: _leftbrace . VariableDecls _rightbrace
   41          | _leftbrace . Stmts _rightbrace
   42          | _leftbrace . VariableDecls Stmts _rightbrace

    _boolean          shift, and go to state 1
    _break            shift, and go to state 74
    _double           shift, and go to state 3
    _for              shift, and go to state 75
    _if               shift, and go to state 76
    _int              shift, and go to state 5
    _newarray         shift, and go to state 77
    _println          shift, and go to state 78
    _readln           shift, and go to state 79
    _return           shift, and go to state 80
    _string           shift, and go to state 6
    _while            shift, and go to state 81
    _minus            shift, and go to state 82
    _not              shift, and go to state 83
    _semicolon        shift, and go to state 84
    _leftparen        shift, and go to state 85
    _leftbrace        shift, and go to state 63
    _intconstant      shift, and go to state 86
    _doubleconstant   shift, and go to state 87
    _stringconstant   shift, and go to state 88
    _booleanconstant  shift, and go to state 89
    _id               shift, and go to state 90

    VariableDecl   go to state 91
    Variable       go to state 12
    Type           go to state 48
    StmtBlock      go to state 92
    VariableDecls  go to state 93
    Stmts          go to state 94
    Stmt           go to state 95
    IfStmt         go to state 96
    WhileStmt      go to state 97
    ForStmt        go to state 98
    BreakStmt      go to state 99
    ReturnStmt     go to state 100
    PrintStmt      go to state 101
    Expr           go to state 102
    Lvalue         go to state 103
    Call           go to state 104
    Constant       go to state 105


State 64

   18 FunctionDecl: _void _id _leftparen _rightparen StmtBlock .

    $default  reduce using rule 18 (FunctionDecl)


State 65

   20 Variables: Variable _comma . Variables

    _boolean  shift, and go to state 1
    _double   shift, and go to state 3
    _int      shift, and go to state 5
    _string   shift, and go to state 6
    _id       shift, and go to state 8

    Variable   go to state 47
    Type       go to state 48
    Variables  go to state 106


State 66

    8 Variable: Type _id .

    $default  reduce using rule 8 (Variable)


State 67

   16 FunctionDecl: _void _id _leftparen Formals _rightparen . StmtBlock

    _leftbrace  shift, and go to state 63

    StmtBlock  go to state 107


State 68

   17 FunctionDecl: Type _id _leftparen _rightparen StmtBlock .

    $default  reduce using rule 17 (FunctionDecl)


State 69

   15 FunctionDecl: Type _id _leftparen Formals _rightparen . StmtBlock

    _leftbrace  shift, and go to state 63

    StmtBlock  go to state 108


State 70

   25 ClassDecl: _class _id _extends _id _implements Ids . Fields0

    _leftbrace  shift, and go to state 27

    Fields0  go to state 109


State 71

   27 Ids: _id _comma Ids .

    $default  reduce using rule 27 (Ids)


State 72

   39 Prototype: _void _id _leftparen . Formals _rightparen _semicolon

    _boolean  shift, and go to state 1
    _double   shift, and go to state 3
    _int      shift, and go to state 5
    _string   shift, and go to state 6
    _id       shift, and go to state 8

    Variable   go to state 47
    Type       go to state 48
    Formals    go to state 110
    Variables  go to state 50


State 73

   38 Prototype: Type _id _leftparen . Formals _rightparen _semicolon

    _boolean  shift, and go to state 1
    _double   shift, and go to state 3
    _int      shift, and go to state 5
    _string   shift, and go to state 6
    _id       shift, and go to state 8

    Variable   go to state 47
    Type       go to state 48
    Formals    go to state 111
    Variables  go to state 50


State 74

   63 BreakStmt: _break . _semicolon

    _semicolon  shift, and go to state 112


State 75

   59 ForStmt: _for . _leftparen _semicolon Expr _semicolon _rightparen Stmt
   60        | _for . _leftparen Expr _semicolon Expr _semicolon _rightparen Stmt
   61        | _for . _leftparen _semicolon Expr _semicolon Expr _rightparen Stmt
   62        | _for . _leftparen Expr _semicolon Expr _semicolon Expr _rightparen Stmt

    _leftparen  shift, and go to state 113


State 76

   56 IfStmt: _if . _leftparen Expr _rightparen Stmt
   57       | _if . _leftparen Expr _rightparen Stmt _else Stmt

    _leftparen  shift, and go to state 114


State 77

   73 Expr: _newarray . _leftparen _intconstant _comma Type _rightparen

    _leftparen  shift, and go to state 115


State 78

   66 PrintStmt: _println . _leftparen Exprs _rightparen _semicolon

    _leftparen  shift, and go to state 116


State 79

   72 Expr: _readln . _leftparen _rightparen

    _leftparen  shift, and go to state 117


State 80

   64 ReturnStmt: _return . _semicolon
   65           | _return . Expr _semicolon

    _newarray         shift, and go to state 77
    _readln           shift, and go to state 79
    _minus            shift, and go to state 82
    _not              shift, and go to state 83
    _semicolon        shift, and go to state 118
    _leftparen        shift, and go to state 85
    _intconstant      shift, and go to state 86
    _doubleconstant   shift, and go to state 87
    _stringconstant   shift, and go to state 88
    _booleanconstant  shift, and go to state 89
    _id               shift, and go to state 119

    Expr      go to state 120
    Lvalue    go to state 103
    Call      go to state 104
    Constant  go to state 105


State 81

   58 WhileStmt: _while . _leftparen Expr _rightparen Stmt

    _leftparen  shift, and go to state 121


State 82

   89 Expr: _minus . Expr

    _newarray         shift, and go to state 77
    _readln           shift, and go to state 79
    _minus            shift, and go to state 82
    _not              shift, and go to state 83
    _leftparen        shift, and go to state 85
    _intconstant      shift, and go to state 86
    _doubleconstant   shift, and go to state 87
    _stringconstant   shift, and go to state 88
    _booleanconstant  shift, and go to state 89
    _id               shift, and go to state 119

    Expr      go to state 122
    Lvalue    go to state 103
    Call      go to state 104
    Constant  go to state 105


State 83

   88 Expr: _not . Expr
